cabal-version:      2.4
name:               llvm-pretty-referential
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jaro Reinders
maintainer:         jaro.reinders@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  LLVM.Types
                    , LLVM.Conversion

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , llvm-pretty ^>=0.11.0
                    , containers ^>=0.6.4.1
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -fdefer-typed-holes
