cabal-version:      2.4
name:               llvm-pretty-referential
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jaro Reinders
maintainer:         jaro.reinders@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
  , src/Text/LLVM/AG.ag
  , src/Text/LLVM/AGData.ag
  , src/Text/LLVM/Resolve.ag
build-type: Custom

custom-setup
  setup-depends:
      base         >=4.13   && <4.15
    , Cabal        >=3.0
    , uuagc        >=0.9.53 && <0.10
    , uuagc-cabal  >=1.2    && <1.3

library
    exposed-modules: Text.LLVM.AG
                   , Text.LLVM.AGData
                   , Text.LLVM.Resolve
                   , LLVM.Types
                   , LLVM.Utils
                   , LLVM.TypeInference
    autogen-modules: Text.LLVM.AG
                   , Text.LLVM.AGData
                   , Text.LLVM.Resolve

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , llvm-pretty ^>=0.11.0
                    , containers ^>=0.6.4.1
                    , mtl
                    , hashable
                    , deepseq
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
    -- -fdefer-typed-holes
    x-agmodule:      file: "src/Text/LLVM/AG.ag" options : haskellsyntax
    x-agmodule:      file: "src/Text/LLVM/AGData.ag" options : haskellsyntax, data
    x-agmodule:      file: "src/Text/LLVM/Resolve.ag" options : haskellsyntax, self, catas, semfuns, signatures, pretty, wrappers, kennedywarren

